objects/VonageMessagingConversation__c.object
<CustomObject>
    <description>MessagingConversation groups MessagingHistory</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>associated Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MessagingConversations</relationshipLabel>
        <relationshipName>MessagingConversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrandPhoneNumber__c</fullName>
        <label>BrandPhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>associated Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>MessagingConversations</relationshipLabel>
        <relationshipName>MessagingConversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sms</fullName>
                    <default>true</default>
                    <label>sms</label>
                </value>
                <value>
                    <fullName>whatsapp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactPhoneNumber__c</fullName>
        <label>ContactPhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>associated Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MessagingConversations</relationshipLabel>
        <relationshipName>MessagingConversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTimeCreated__c</fullName>
        <description>date time creation of conversation</description>
        <label>DateTimeCreated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastMessageDirection__c</fullName>
        <label>LastMessageDirection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>out,in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>associated Lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>MessagingConversations</relationshipLabel>
        <relationshipName>MessagingConversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MessagingConversations</relationshipLabel>
        <relationshipName>MessagingConversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open,Closed,Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isUnread__c</fullName>
        <defaultValue>false</defaultValue>
        <description>marks conversation as unread</description>
        <label>isUnread</label>
        <type>Checkbox</type>
    </fields>
    <label>MessagingConversation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BrandPhoneNumber__c</columns>
        <columns>Case__c</columns>
        <columns>Channel__c</columns>
        <columns>ContactPhoneNumber__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MessagingConversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MessagingConversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>